# OOP_course

./: .gitignore  14.1_main.py  14.2_main.py  15.1_main.py  16.1_main.py  16.2_main.py  17.1_main.py  README.md  config.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_product_py.html  z_145eef247bfb46b6_category_iterator_py.html  z_145eef247bfb46b6_mixins_py.html  z_145eef247bfb46b6_product_heirs_py.html  z_145eef247bfb46b6_task_py.html  z_145eef247bfb46b6_train_py.html  z_145eef247bfb46b6_utils_py.html
src/: base_product.py  category_iterator.py  mixins.py  product_heirs.py  task.py  utils.py
tests/: conftest.py  test_category_iterator.py  test_mixins.py  test_product_heirs.py  test_task.py  test_utils.py
